# Aivy-companion-star-main

./: .env  mem0 memory guide  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
app/api/chat/: route.ts
lib/ai/: agents.ts  emotional-agent.ts  hybrid-agent.ts
lib/memory/: bridge.ts  mem0-client.ts  memory-service.ts  memory-tools.ts
lib/memory/python/: mem0_bridge.py
lib/memory/python/mem0ai/: __init__.py
lib/milvus/: init.ts  vectors.ts
scripts/: test-bridge.ts
types/: mem0.d.ts
